--- a/CookBook/Content/Site.css
+++ b/CookBook/Content/Site.css
@@ -26,3 +26,60 @@ textarea {
 .input-validation-error {
     background-color:pink
 }
+
+.btn-submenu {
+    margin-top: 10px;
+    color: #333333;
+    background-color: #ffffff;
+    border-color: #cccccc;
+}
+
+.timeInput {
+    max-width:50px;
+}
+
+.recipeEditPage textarea {
+    width: 600px;
+    max-width:600px;
+    height:100px;
+    resize:vertical;
+}
+
+.recipeEditPage .recipeNameField {
+    width:500px;
+    max-width:none;
+}
+
+.recipeEditPage input {
+    max-width:50px;
+}
+
+#sortable input {
+    border:none;
+}
+
+.quantityColumn,
+.unitOfMeasurementColumn {
+    width:50px;
+}
+
+.gripColumn,
+.buttonColumn {
+    width:20px;
+}
+
+.quantityColumn input {
+    max-width:50px;
+}
+
+.unitOfMeasurementColumn input {
+    max-width:80px;
+}
+
+.descriptionColumn {
+    width:600px;
+}
+.descriptionColumn input {
+    width:600px;
+    max-width:600px;
+}
